from sql_injection import SQLInjection
from xss_attack import XSSAttack
from ssrf_exploit import SSRFExploit

## main.py
class Main:
    """
    Main class to orchestrate the testing of web vulnerabilities including SQL injection, XSS, and SSRF.
    """

    def main(self) -> str:
        """
        Main method to initiate the testing process.

        Returns:
            str: A consolidated report of all tests conducted.
        """
        # URLs to test
        target_url = "http://localhost:9090"

        # Create instances of vulnerability testing classes
        sql_injection_tester = SQLInjection()
        xss_tester = XSSAttack()
        ssrf_tester = SSRFExploit()

        # Perform tests
        sql_report = sql_injection_tester.test_injection(target_url)
        xss_report = xss_tester.test_xss(target_url)
        ssrf_report = ssrf_tester.test_ssrf(target_url)

        # Consolidate reports
        full_report = "Vulnerability Testing Report:\n"
        full_report += "--------------------------------\n"
        full_report += sql_report
        full_report += xss_report
        full_report += ssrf_report

        return full_report

# # Assuming the other classes are defined in their respective modules as per the legacy code provided
# # Here we simulate the import of these classes
# class SQLInjection:
#     def test_injection(self, target_url: str) -> str:
#         return "SQL Injection test completed.\n"

# class XSSAttack:
#     def test_xss(self, target_url: str) -> str:
#         return "XSS test completed.\n"

# class SSRFExploit:
#     def test_ssrf(self, target_url: str) -> str:
#         return "SSRF test completed.\n"

# Example usage
if __name__ == "__main__":
    main_instance = Main()
    print(main_instance.main())
