
classDiagram
    class Main {
        +url: str
        +run_tests() None
    }
    class SQLInjection {
        +target_url: str
        +test_injection() dict
    }
    class XSSTest {
        +target_url: str
        +test_xss() dict
    }
    class CSRFTest {
        +target_url: str
        +test_csrf() dict
    }
    class ReportGenerator {
        +results: list
        +generate_report() str
    }
    Main --> SQLInjection
    Main --> XSSTest
    Main --> CSRFTest
    Main --> ReportGenerator
